--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+3&display=swap" rel="stylesheet">
 
-<<<<<<< HEAD
-    <link rel="preload" href="/Logo.png" as="image" type="image/png">
-=======
     <link rel="preload" href="Logo.png" as="image">
->>>>>>> 15482939abadf015b0575b7c066f0539d5773ee5
 
 </head>
+<div id = "wrapper">
 <header>
   <div class = 'go-back'>
   <img src="Go Back.png" alt="Go Back" (click)="goBack()">
@@ -20,3 +17,4 @@
 <main>
   <router-outlet></router-outlet>
 </main>
+</div>
