--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
 H2 for subheadings.. etc
 */
 
+#wrapper{
+    max-width: 100%;
+}
+
 body {
   background: linear-gradient(-45deg, #ddf5f9, #f3fafaff, #ddf3ef, #f3fafaff);
   background-size: 400% 400%;
@@ -48,6 +52,8 @@ h1 {font-family: 'Montserrat', sans-serif;
     position: relative;
     left: 10%;
     padding-bottom: 0;
+    word-wrap: normal;
+    max-width: 90%;
 }
 
 h2{
@@ -57,6 +63,7 @@ h2{
     font-size: 30px;
     color: #3E78B2;
     white-space: nowrap;
+    text-align: center;
 }
 
 button {
@@ -103,9 +110,10 @@ body { margin: 0;
 .launch img{
     position:fixed;
     top: -180px;
-    left: 50px;
+    left: -100px;
     max-width: 1150;
     max-height: auto;
+    z-index: -1;
 }
 
 
