--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,12 @@ H2 for subheadings.. etc
 
 #wrapper{
     max-width: 100%;
+    padding-bottom: 5%;
+}
+
+.successMessage{
+    text-align: center;
+    color: #3E78B2;
 }
 
 body {
@@ -134,6 +140,11 @@ body { margin: 0;
     box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
 }
 
+button{
+    display: block;
+    margin: auto;
+}
+
 /*
 Component specific styling*/
 
@@ -203,6 +214,10 @@ Component specific styling*/
 .left-side-buttons .left-side-link a:hover{
     color: #92DCE5;
 }
+
+.left-side-buttons button{
+    text-align: center;
+}
 .center-text-form{
    text-align: center;
    padding-top: 0;
@@ -249,10 +264,20 @@ Component specific styling*/
     margin-top: 5px;
 }
 
+.wide-table{
+    overflow-x: auto; 
+  width: 100%; 
+}
+
 ul {
     display: table;
-    margin: 30px;
+    margin: 30px auto;
+    max-width: 80%;
     
+}
+
+ul h2{
+    text-align: center;
 }
 
 ul li{
@@ -268,7 +293,18 @@ ul li .table-cell{
     border: 1px solid #3E78B2;
     padding: 10px;
     color:#3E78B2;
+    max-width: 150px;       /* cell width */
+  font-size: calc(12px + 0.5vw); /* font scales with viewport */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+   width: 15%;
 }
+
+ul li .table-cell button{
+    font-size: 20px;
+}
+
 
 .work-order-side-panel{
     justify-content: flex-start;
