--- a/src/styles.css
+++ b/src/styles.css
@@ -76,8 +76,9 @@ button {
     font-family: 'Source Sans 3', sans-serif;
     font-weight: bold;
     font-size: 30px;
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 75%;
     padding: 1%;
     background-color: #92DCE5;
     color: #f3fafaff;
@@ -90,6 +91,7 @@ button {
     border-style: none;
     box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
     box-sizing: border-box;
+    text-align: center;
 
 }
 
@@ -162,8 +164,8 @@ Component specific styling*/
     border-radius: 25px;
     font-family: 'Source Sans 3', sans-serif;
     font-weight: bold;
-    font-size: 50px;
-    margin-left: 150%;
+    font-size: 30px;
+    margin-left: 300%;
     padding-left: 15%;
     padding-right: 200%;
     box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
@@ -173,10 +175,10 @@ Component specific styling*/
 }
 
 .left-side-buttons button{
-    margin-left: 200%;
+    margin-left: 375%;
     padding-left: 10%;
     padding-right: 30%;
-    margin-top: 5%;
+    margin-top: 15%;
     margin-bottom: 5%;
     text-align: center;
     background-color: #bad5d5;
@@ -217,6 +219,7 @@ Component specific styling*/
 
 .left-side-buttons button{
     text-align: center;
+    padding: 3%;
 }
 .center-text-form{
    text-align: center;
@@ -265,14 +268,17 @@ Component specific styling*/
 }
 
 .wide-table{
-    overflow-x: auto; 
+  overflow-x: auto; 
   width: 100%; 
+}
+
+.wide-table ul li .table-cell button{
+     width: 110px;
 }
 
 ul {
     display: table;
     margin: 30px auto;
-    max-width: 80%;
     
 }
 
@@ -293,16 +299,25 @@ ul li .table-cell{
     border: 1px solid #3E78B2;
     padding: 10px;
     color:#3E78B2;
-    max-width: 150px;       /* cell width */
   font-size: calc(12px + 0.5vw); /* font scales with viewport */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-   width: 15%;
 }
 
 ul li .table-cell button{
-    font-size: 20px;
+    font-size: 15px;
+    width: 100px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+form button{
+    max-width: 30%;
+}
+
+.center-text-form button{
+    max-width: 30%;
 }
 
 
@@ -316,6 +331,25 @@ ul li .table-cell button{
     text-align: center;
     white-space: nowrap;
 }
+
+.work-order-side-panel select{
+    font-family: 'Source Sans 3', sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    background-color: #92DCE5;
+    color: #f3fafaff;
+
+    /*
+    pretty styling
+    */
+    appearance: none;
+    border-radius: 10px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-sizing: border-box;
+    text-align: center;
+}
+
 
 form {
     display: flex;
